css/flexbox-nav-exercise.css
.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;  /* Preferred icon size */
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;}


*{
    box-sizing: border-box;
    color: black;
}

.navbar{
    display: flex;
    align-items: center;
    background-color: darkgrey;
    width: 100%;
    border: 3px solid #f2cfc4;
    border-radius: 5px;
    position: fixed;
    top: 0;
}

body{
    background-color: #cbffcd;
    margin: 0 auto;
    padding-top: 5em;

}

a{
    text-decoration: none;

}

a:hover{
    color: blue;
}

ul{
    list-style: none;
}

.logo{
    width: 33.33%;
    font-size: 3em;
    padding-top: 0;
    padding-bottom: 0;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    justify-content: center;
    align-items: center;
}

.left-side-list {
    width: 33.33%;
    font-family: 'Work Sans', sans-serif;
    display: flex;
    margin: 0;
    padding: .5em;
}

.left-side-list a{
    padding: .5em;
}

.right-side a{
    padding: .5em;

}

.follow-us{
    font-family: 'Work Sans', sans-serif;
    vertical-align: top;
    padding: 0;
    height: 24px;
}

.follow-us a{
    padding: 0;
    font-size: 1.25em;
}

.right-side{
    width: 33.33%;
    text-align: right;

}

#footer{
    background-color: #f2cfc4;
    width: 97%;
    font-family: 'Work Sans', sans-serif;
    border-radius: 10em;
    height: fit-content;
    font-size: .8em;
    font-weight: bold;
    display: table;
    margin: auto;
}


.column{
    float: left;
    width: 33.33%;
    padding: 25px;
    background-color: #f2cfc4;
    display: table-cell;
    text-align: center;
}

#footer-header{
    padding: 25px;
}

form input{
    width: 50%;
    background-color: #cbffcd;
    border: 1px solid blue;
    font-family: 'Montserrat', sans-serif;
}
form textarea{
    width: 50%;
    resize: none;
    background-color: #cbffcd;
    border: 1px solid blue;
    font-family: 'Montserrat', sans-serif;
}

p{
    width: 30%;
    text-align: center;
}

img{
    height: 10em;
    padding-top: 2em;
    border-radius: 1em;

}

#contact-info{
    width: 50%;
    margin: auto;
}

#tag{
    text-align: center;
    margin: 1em;
}

